@@ -7640,6 +7640,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\include\wx\simplebook.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\include\wx\sizer.h"
 				>
 			</File>
