@@ -535,8 +535,9 @@ All:
 
 All (GUI):
 
-- Add support for searching in wxWebView for MSW and GTK (Allonii).
+- Add new wxSimplebook class.
 - Respect window max size in wxBoxSizer (Nathan Ridge).
+- Add support for searching in wxWebView for MSW and GTK (Allonii).
 - Add possibility to hide and show again wxRibbonBar pages (wxBen).
 - Add wxRibbonBar pages highlighting (wxBen).
 - Add expand/collapse button to wxRibbonBar (rakeshthp).
